Fixed Routing from login to acccess code page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
         <!-- Link to Access Code Form -->
         <div class="toggle-option">
-            <p>Or <a href="access-code-page.html">Enter Access Code</a></p>
+            <p>Or <a href="/information/accessCode">Enter Access Code</a></p>
         </div>
     </div>
 
