--- a/views/application/accessCode.ejs
+++ b/views/application/accessCode.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - HealthSecureOps</title>
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
