--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,36 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup - HealthSecureOps</title>
-    <!-- Link to external CSS -->
+    <title>Login - HealthSecureOps</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
-    <div class="login-container">
-        <h2>Signup for HealthSecureOps</h2>
-
-        <!-- Signup Form -->
-        <form id="signupForm">
-            <div class="form-group">
-                <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" name="firstname" required>
-            </div>
-            <div class="form-group">
-                <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="lastname" required>
-            </div>
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <input type="submit" value="Signup">
-        </form>
-    </div>
+    <h1>Home Page</h1>
 
 </body>
 </html>
