--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,3 +63,15 @@ h2 {
 .login-container input[type="submit"]:hover {
     background-color: #007bbf; /* Slightly darker blue on hover */
 }
+
+.login-container img {
+    margin: 20px auto;
+}
+
+.image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
