--- a/views/application/homepage.ejs
+++ b/views/application/homepage.ejs
@@ -10,7 +10,9 @@
     <div class="login-container">
         <h1>Welcome to HealthCareSecureOps!</h1>
         <h2>Please select an option to analyze threat assessments</h2>
+        <div class="image-container">
         <img src="https://as1.ftcdn.net/v2/jpg/05/14/36/48/1000_F_514364850_xLOQX6SOY2qcjAIcTowsi3xYvHmhmvs0.jpg" alt="HealthSecureOps Logo" width="150">
+        </div>
         <!-- Will link to other pages when created-->
         <main>
             <div class = "body">
