--- a/views/application/homepage.ejs
+++ b/views/application/homepage.ejs
@@ -16,13 +16,13 @@
         <!-- Will link to other pages when created-->
         <main>
             <div class = "body">
-                <button onclick="location.href='loggedIncidents.ejs'">Logged Incidents</button>
+                <button onclick="location.href='/loggedIncidents.ejs'">Logged Incidents</button>
             </div>
             <div class = "body">
-            <button onclick="location.href='currentThreats.ejs'">Current Threats</button>
+            <button onclick="location.href='/currentThreats.ejs'">Current Threats</button>
             </div>
             <div class = "body">
-            <button onclick="location.href='reccomendedMeasures.ejs'">Reccomended Measures</button>
+            <button onclick="location.href='/reccomendedMeasures.ejs'">Reccomended Measures</button>
             </div>
         </main>
     </div>
