--- a/views/application/homepage.ejs
+++ b/views/application/homepage.ejs
@@ -16,13 +16,13 @@
         <!-- Will link to other pages when created-->
         <main>
             <div class = "body">
-                <button onclick="location.href='/loggedIncidents'">Logged Incidents</button>
+                <button onclick="location.href='views/loggedIncidents'">Logged Incidents</button>
             </div>
             <div class = "body">
             <button onclick="location.href='/currentThreats'">Current Threats</button>
             </div>
             <div class = "body">
-            <button onclick="location.href='/reccomendedMeasures'">Reccomended Measures</button>
+            <button onclick="location.href='views/reccomendedMeasures'">Reccomended Measures</button>
             </div>
         </main>
     </div>
