Fixed some of the routes

--- a/views/application/homepage.ejs
+++ b/views/application/homepage.ejs
@@ -16,13 +16,13 @@
         <!-- Will link to other pages when created-->
         <main>
             <div class = "body">
-                <button onclick="location.href='/loggedIncidents'">Logged Incidents</button>
+                <a href="/information/loggedIncidents">Logged Incidents</a>
             </div>
             <div class = "body">
-                <a href="/currentThreats">Current Threats</a>
+                <a href="/information/currentThreats">Current Threats</a>
             </div>
             <div class = "body">
-            <button onclick="location.href='/reccomendedMeasures'">Reccomended Measures</button>
+                <a href="/information/reccomendedMeasures">Recommended Measures</a>
             </div>
         </main>
     </div>
