--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,3 +75,92 @@ h2 {
     text-align: center;
     padding: 20px;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    display: flex;
+}
+
+.sidebar {
+    width: 200px;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar ul li {
+    margin: 15px 0;
+}
+
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+}
+
+h1 {
+    font-size: 24px;
+}
+
+.threat-overview {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.clock-icon img {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+}
+
+.clock-icon span {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.critical-warning p {
+    color: red;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.threat-boxes {
+    display: flex;
+    gap: 10px;
+}
+
+.box {
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow {
+    background-color: yellow;
+    color: black;
+}
+
+.green {
+    background-color: green;
+}
