Improved UI and added more functionalities

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - HealthSecureOps</title>
-    <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
+<%- include('./partials/header.ejs')%>
 
-    <h1>Home Page</h1>
+<main>
+    <div class="home-top-section">
+        <h1>Welcome to HealthCareSecureOps!</h1>
+        <h3>Please select an option to analyze threat assessments</h3>
+        <div class="image-container">
+            <div class="button-container">
+                <a href="/information/loggedIncidents">Logged Incidents <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+            </div>
+            <div class="button-container">
+                <a href="/information/currentThreats">Current Threats <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+            </div>
+            <div class="button-container">
+                <a href="/information/reccomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+            </div>
+        </div>
+    </div>
 
-</body>
-</html>
+    <div class="home-content-section">
+        <div class="content-information">
+            <h4>Application Activity</h4>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+            <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+
+            <script>
+            const xValues = [100,200,300,400,500,600,700,800,900,1000];
+    
+            new Chart("myChart", {
+            type: "line",
+            data: {
+                    labels: xValues,
+                    datasets: [{ 
+                    data: [860,1140,1060,1060,1070,1110,1330,2210,7830,2478],
+                    borderColor: "red",
+                    fill: false
+                }, { 
+                    data: [1600,1700,1700,1900,2000,2700,4000,5000,6000,7000],
+                    borderColor: "green",
+                    fill: false
+                }, { 
+                    data: [300,700,2000,5000,6000,4000,2000,1000,200,100],
+                    borderColor: "blue",
+                    fill: false
+                }]
+            },
+                options: {
+                    legend: {display: false}
+                }
+            });
+        </script>
+        </div>
+        
+        <div class="content-information">
+            <h4>Open Cases</h4>
+        </div>
+    </div>
+</main>
+
+<%- include('./partials/footer.ejs')%>
