--- a/views/application/login.ejs
+++ b/views/application/login.ejs
@@ -8,22 +8,24 @@
 </head>
 <body>
 
-    <div class="login-container">
-        <h2>Login to HealthSecureOps</h2>
-
-        <!-- Login Form -->
-        <form action="/information" method="POST">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <input type="submit" value="Login">
-        </form>
-    </div>
+    <main>
+        <div class="login-container">
+            <h2 class="login-title">Login to HealthSecureOps</h2>
+    
+            <!-- Login Form -->
+            <form action="/information" method="POST">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <input type="submit" value="Login">
+            </form>
+        </div>
+    </main>
 
 </body>
 </html>
