changed link on homepage to button

--- a/views/application/homepage.ejs
+++ b/views/application/homepage.ejs
@@ -19,7 +19,7 @@
                 <button onclick="location.href='/loggedIncidents'">Logged Incidents</button>
             </div>
             <div class = "body">
-                <a href="/currentThreats">Current Threats</a>
+                <button onclick="location.href='/currentThreats'">Current Threats</button>
             </div>
             <div class = "body">
             <button onclick="location.href='/reccomendedMeasures'">Reccomended Measures</button>
