--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                 <a href="/currentThreats">Current Threats <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
             <div class="button-container">
-                <a href="/reccomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+                <a href="/recomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
         </div>
     </div>
