--- a/views/application/login.ejs
+++ b/views/application/login.ejs
@@ -9,7 +9,7 @@
 <body>
 
     <main>
-        <div class="login-container">
+        <div class="form-container">
             <h2 class="login-title">Login to HealthSecureOps</h2>
     
             <!-- Login Form -->
