--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,13 @@
         <h3>Please select an option to analyze threat assessments</h3>
         <div class="image-container">
             <div class="button-container">
-                <a href="/loggedIncidents">Logged Incidents <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+                <a href="/information/loggedIncidents">Logged Incidents <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
             <div class="button-container">
-                <a href="/currentThreats">Current Threats <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+                <a href="/information/currentThreats">Current Threats <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
             <div class="button-container">
-                <a href="/recomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+                <a href="/information/reccomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
         </div>
     </div>
