--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
             <div class="header-right">
+                <a href="/information/forms">Log Case</a>
                 <a href='#items'>Alerts</a>
                 <a href='/information/login'>Log Out</a>
             </div>
