--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
             <div class="button-container">
                 <a href="/information/reccomendedMeasures">Recommended Measures <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
             </div>
+            <div class="button-container">
+                <a href="/information/checkCases">Check Cases <i class='fa fa-arrow-right' style='font-size:20px'></i></a>
+            </div>
         </div>
     </div>
 
