--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <header>
         <div class="header-container">
             <a href='/information' class="logo"><img src="https://as1.ftcdn.net/v2/jpg/05/14/36/48/1000_F_514364850_xLOQX6SOY2qcjAIcTowsi3xYvHmhmvs0.jpg" alt="logo" width="100" height="80"></a>
-            <form method="GET" action="/items" class="search-bar">
+            <form method="GET" action="/information/checkCases" class="search-bar">
                 <input type="text" placeholder="Search.." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
