--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,12 +58,16 @@
 
         <div class="content-information">
             <h4>Open Cases</h4>
-            <% cases.forEach(caseItem => { %>
-                <div class="case-homeInfo-container">
-                    <div class="case-information"><%= caseItem.caseTitle %></div>
-                    <div class="case-information"><%= caseItem.threatType%></div>
-                </div>
-            <% }) %>
+            <% if (cases && cases.length > 0) { %>
+                <% cases.forEach(caseItem => { %>
+                    <div class="case-homeInfo-container">
+                        <div class="case-information"><%= caseItem.caseTitle %></div>
+                        <div class="case-information"><%= caseItem.threatType %></div>
+                    </div>
+                <% }) %>
+            <% } else { %>
+                <p>No cases available</p>
+            <% } %>            
         </div>
         
     </div>
