--- a/views/application/reccomendedMeasures.ejs
+++ b/views/application/reccomendedMeasures.ejs
@@ -1,35 +1,39 @@
 <%- include('../partials/header.ejs')%>
-    <main>
-        <div class="recommended-measures-container">
-            <div class="recommended-measures-header">Recommended Measures</div>
-        
-            <div class="measure-card">
-              <h2>Measures to keep in mind</h2>
-              <div class="small-text">Published date</div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...</p>
-            </div>
-        
-            <div class="other-warnings">Other Warnings &rarr;</div>
-        
-            <div class="warning-card">
-              <img src="/images/placeholder.png" alt="Warning Icon">
-              <div class="warning-text">
-                <h3>Warning</h3>
-                <p>Description duis aute irure dolor in reprehenderit in voluptate velit.</p>
-                <div class="time-info">Today - 23 min</div>
-              </div>
-            </div>
-        
-            <div class="warning-card">
-              <img src="/images/placeholder.png" alt="Warning Icon">
-              <div class="warning-text">
-                <h3>Warning 2</h3>
-                <p>Description duis aute irure dolor in reprehenderit in voluptate velit.</p>
-                <div class="time-info">Today - 23 min</div>
-              </div>
-            </div>
-            
+<main>
+  <div class="recommended-measures-container">
+    <div class="recommended-measures-header">Recommended Measures</div>
+
+    <% if (recommendedMeasures.length > 0) { %>
+      <% let randomIndices = []; %>
+      <% while (randomIndices.length < 4 && randomIndices.length < recommendedMeasures.length) { %>
+        <% let randomIndex = Math.floor(Math.random() * recommendedMeasures.length); %>
+        <% if (!randomIndices.includes(randomIndex)) { randomIndices.push(randomIndex); } %>
+      <% } %>
+
+      <% let value = 1; %>
+
+      <% randomIndices.forEach(index => { %>
+
+        <% if (value === 1) { %>
+          <div class="measure-card">
+            <h2><%= recommendedMeasures[index].title%></h2>
+            <p><%= recommendedMeasures[index].details%></p>
+            <p><%= recommendedMeasures[index].recommendation%></p>
           </div>
-    </main>
+
+          <div class="other-warnings">Previous Recommendations &rarr;</div>
+          <% value = 0 %>
+        <% } else { %>
+          <div class="warning-card">
+            <div class="warning-text">
+              <h3><%= recommendedMeasures[index].title %></h3>
+              <p><%= recommendedMeasures[index].details %></p>
+            </div>
+          </div>
+        <% } %>
+      <% }) %>
+    <% } %>
+
+  </div>
+</main>
 <%- include('../partials/footer.ejs')%>
