--- a/views/application/currentThreats.ejs
+++ b/views/application/currentThreats.ejs
@@ -11,10 +11,20 @@
               <span class="label">Threats</span>
             </div>
           </div>
-          <div class="alert-card">
-            <span class="alert-title">Critical Threat</span>
-            <span class="alert-description">Data is not encrypted in user logging application.</span>
-          </div>
+
+          <% if (currentThreats.length > 0) {
+                let counter = 0;
+                 currentThreats.forEach(threat => {
+
+                  if (threat.type === "Critical") {
+                    counter++;
+                  }
+                 }); %>
+              <div class="alert-card">
+                <span class="alert-title">Critical Threats Present</span>
+                <span class="alert-description">There are <%= counter%> Critical Threats Please resolve as soon as possible</span>
+              </div>
+          <%}%>
         </div>
     
         <div class="grid-container">
@@ -26,7 +36,7 @@
                 <div class="threat-type"><%= threat.type%></div>
               </div>
             </div>
-          <% }) %>
+          <% }); %>
         </div>
       </div>
 </main>
